Edited page birthday

--- a/pages/birthday.html
+++ b/pages/birthday.html
@@ -4,10 +4,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Sanrio Style</title>
+  <title>Feliz Cumpleaños</title>
 
   <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/css/birthday.css">
+  <link rel="shortcut icon" type="image/x-icon" href="/assets/images/icon.avif">
   <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
 
 
@@ -16,7 +17,7 @@
   <header>
     <img src="/assets/images/hello-kitty-gif-11 (1).gif" alt="" srcset="">
     <nav>
-      <a href="#hero">Inicio</a>
+      <a href="#inicio-micaela">Inicio</a>
       <a href="#cuenta-regresiva">Cuenta regresiva</a>
       <a href="#">Sobre ella</a>
       <a href="#">Mensaje</a>
@@ -24,11 +25,35 @@
     </nav>
   </header>
 
-  <!-- <section class="hero">
-    <h1>✨ Bienvenido ✨</h1>
-    <p>El mundo más cute 💖</p>
-    <button>Explorar</button>
-  </section> -->
+  <section id="inicio-micaela">
+    <div class="row-header-info">
+      <div class="columna-1-header">
+        <h1 class="header-h1">
+          Te Quiero Mucho, Mi Micaela
+        </h1>
+        <h2 class="header-h2">LO ERES TODO</h2>
+        <h2 class="header-h2">PARA MI</h2>
+        <h3 class="header-h3">
+          <p>A veces intento poner en palabras lo que significas para mí, pero siento que no alcanza.</p>
+
+          <p>He leído muchas cosas, muchas formas de explicar lo que uno siente… pero cuando se trata de ti, nada encaja
+            del todo.</p>
+
+          <p>Supongo que hay cosas que no se explican, solo se sienten.</p>
+
+          <p>Y lo que hay en mí por ti es así… algo que no depende del tiempo, ni de la distancia, ni de todo lo que ha
+            pasado.</p>
+
+          <p>Algo que simplemente sigue ahí.</p>
+        </h3>
+      </div>
+      <div class="columna-2-header">
+        <img src="/assets/images/Marco de Página Patrón Floral  Ilustrado Sencillo Rojo y Verde.png" alt="">
+        <img class="love_float" src="/assets/images/love.png" alt="">
+        <img class="paw_float" src="/assets/images/paw.png" alt="">
+      </div>
+    </div>
+  </section>
 
   <section class="contador" id="cuenta-regresiva">
     <canvas id="fuegosCanvas"></canvas>
