--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Feliz Cumpleaños 🎂</title>
     <link rel="stylesheet" href="css/cake.css">
-    <link rel="shortcut icon" type="image/x-icon" href="assets/images/icon.avif">
+    <link rel="shortcut icon" type="image/x-icon" href="assets/images/logos/icon.avif">
     <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
 </head>
 
