--- a/pages/birthday.html
+++ b/pages/birthday.html
@@ -8,14 +8,14 @@
 
   <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/css/birthday.css">
-  <link rel="shortcut icon" type="image/x-icon" href="/assets/images/icon.avif">
+  <link rel="shortcut icon" type="image/x-icon" href="/assets/images/logos/icon.avif">
   <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
 
 
 <body>
 
   <header>
-    <img src="/assets/images/hello-kitty-gif-11 (1).gif" alt="" srcset="">
+    <img src="/assets/images/animations/hello-kitty-love.gif" alt="" srcset="">
     <nav>
       <a href="#inicio-micaela">Inicio</a>
       <a href="#cuenta-regresiva">Cuenta regresiva</a>
@@ -48,16 +48,16 @@
         </h3>
       </div>
       <div class="columna-2-header">
-        <img src="/assets/images/Marco de Página Patrón Floral  Ilustrado Sencillo Rojo y Verde.png" alt="">
-        <img class="love_float" src="/assets/images/love.png" alt="">
-        <img class="paw_float" src="/assets/images/paw.png" alt="">
+        <img src="/assets/images/marco-imagen.png" alt="">
+        <img class="love_float" src="/assets/images/icons/love.png" alt="">
+        <img class="paw_float" src="/assets/images/icons/paw.png" alt="">
       </div>
     </div>
   </section>
 
   <section class="contador" id="cuenta-regresiva">
     <canvas id="fuegosCanvas"></canvas>
-    <img src="/assets/images/hello-kitty-birthday-cake-drawing-hello-afe8bca23d15b5e389fe01ab42e82c8f.png" alt=""
+    <img src="/assets/images/hello-kitty-cake.png" alt=""
       srcset="">
     <div class="contenido">
       <div class="container-timer" id="tiempo-de-espera">
