--- a/pages/loader.html
+++ b/pages/loader.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Cargando . . .</title>
-    <link rel="shortcut icon" type="image/x-icon" href="/assets/images/icon.avif">
+    <link rel="shortcut icon" type="image/x-icon" href="/assets/images/logos/icon.avif">
     <link rel="stylesheet" href="/css/loader.css">
 </head>
 
