Added Mapa estelar

--- a/pages/birthday.html
+++ b/pages/birthday.html
@@ -21,7 +21,7 @@
       <a href="#cuenta-regresiva">Cuenta regresiva</a>
       <a href="#">Sobre ella</a>
       <a href="#">Mensaje</a>
-      <a href="#">Sorpresa</a>
+      <a href="/pages/mapa-estelar.html">Sorpresa</a>
     </nav>
   </header>
 
