Added Mapa estelar

--- a/pages/mapa-estelar.html
+++ b/pages/mapa-estelar.html
@@ -16,7 +16,7 @@
         <img id="mapa-estelar" src="/assets/images/animations/mapa-estelar.gif" alt="">
         <h1>"Mi Lugar favorito en el mundo es a tu lado"</h1>
         <h2>Micaela & Daniel</h2>
-        <div id="coordenadas">
+        <div class="coordenadas">
             <p>Cusco, Perú</p>
             <p>27 FEBRERO 2004</p>
             <p>13°31′01″S 71°58′43″W</p>
