--- a/pages/mapa-estelar.html
+++ b/pages/mapa-estelar.html
@@ -5,21 +5,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mapa Estelar</title>
+    <link rel="shortcut icon" type="image/x-icon" href="/assets/images/logos/cancer.png">
+
     <link rel="stylesheet" href="/css/mapa-estelar.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Betania+Patmos&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Betania+Patmos&display=swap" rel="stylesheet">
 </head>
 
 <body>
     <div class="container-sorprise">
-        <img id="mapa-estelar" src="/assets/images/animations/mapa-estelar.gif" alt="">
-        <h1>"Mi Lugar favorito en el mundo es a tu lado"</h1>
-        <h2>Micaela & Daniel</h2>
-        <div class="coordenadas">
-            <p>Cusco, Perú</p>
-            <p>27 FEBRERO 2004</p>
-            <p>13°31′01″S 71°58′43″W</p>
+        <div class="container-data">
+            <img id="mapa-estelar" src="/assets/images/animations/mapa-estelar.gif" alt="">
+            <h1>"Mi Lugar favorito en el mundo es a tu lado"</h1>
+            <h2>Micaela & Daniel</h2>
+            <div class="coordenadas">
+                <p>Cusco, Perú</p>
+                <p>27 FEBRERO 2004</p>
+                <p>13°31′01″S 71°58′43″W</p>
+            </div>
+        </div>
+        <div class="container-spotify">
+        <img id="spotify-code" src="/assets/images/spotify-code.jpg" alt="" srcset="">
         </div>
     </div>
 </body>
