Change img spotify width

--- a/pages/birthday.html
+++ b/pages/birthday.html
@@ -9,7 +9,15 @@
   <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/css/birthday.css">
   <link rel="shortcut icon" type="image/x-icon" href="/assets/images/logos/icon.avif">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Life+Savers:wght@400;700;800&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&family=Life+Savers:wght@400;700;800&display=swap"
+    rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
+
 
 
 <body>
@@ -20,7 +28,7 @@
       <a href="#inicio-micaela">Inicio</a>
       <a href="#cuenta-regresiva">Cuenta regresiva</a>
       <a href="#">Sobre ella</a>
-      <a href="#">Mensaje</a>
+      <a href="#dedicatoria">Mensaje</a>
       <a href="/pages/mapa-estelar.html">Sorpresa</a>
     </nav>
   </header>
@@ -57,8 +65,7 @@
 
   <section class="contador" id="cuenta-regresiva">
     <canvas id="fuegosCanvas"></canvas>
-    <img src="/assets/images/hello-kitty-cake.png" alt=""
-      srcset="">
+    <img src="/assets/images/hello-kitty-cake.png" alt="" srcset="">
     <div class="contenido">
       <div class="container-timer" id="tiempo-de-espera">
         <div class="box">
@@ -91,21 +98,48 @@
     </div>
   </section>
 
-  <section class="section">
-    <h2>🎀 Personajes</h2>
-    <div class="grid">
-      <div class="card">
-        <img src="https://i.imgur.com/fY7Z3WJ.png">
-        <h3>Hello Kitty</h3>
-      </div>
-      <div class="card">
-        <img src="https://i.imgur.com/5L6U6R8.png">
-        <h3>My Melody</h3>
-      </div>
-      <div class="card">
-        <img src="https://i.imgur.com/K9KQ8eS.png">
-        <h3>Kuromi</h3>
-      </div>
+  <section class="dedicatoria" id="dedicatoria">
+    <h1>Feliz cumpleaños, Micaela 💖</h1>
+    <div class="container-dedicatoria">
+      <p>Este mensaje lo estás leyendo justo a las 12… pero en realidad lo pensé desde mucho antes.
+        Porque alguien como tú no se celebra solo un momento… se celebra con intención, con cariño… y con el corazón.
+      </p>
+
+      <p>Hoy no es un día cualquiera, porque hoy nació alguien que tiene una forma muy especial de ser.
+        Alguien que, sin esforzarse, logra transmitir calma, ternura y algo difícil de explicar… pero muy bonito de
+        sentir.</p>
+
+      <p>Y la verdad… me alegra mucho poder estar aquí contigo en este momento.</p>
+      <p>Porque no quise que este día pase como cualquier otro… por eso viajé hasta Cusco, para estar a tu lado, para
+        compartir tu cumpleaños contigo, para verte sonreír, para abrazarte y vivir este momento juntos.</p>
+
+      <p>No es solo un viaje… es una forma de decirte que eres importante para mí, que vales el tiempo, la distancia y
+        cada esfuerzo que haga.</p>
+
+      <p>Desde que llegaste, todo se siente distinto.</p>
+      <p>Hay algo en ti que hace que quiera quedarme, que quiera seguir compartiendo momentos, que quiera seguir
+        conociéndote más… sin apuros, pero con ganas reales.</p>
+
+      <p>Y hoy, más que desearte cosas bonitas (que sé que te las mereces todas), quiero que sientas lo especial que
+        eres.
+        Que te sientas querida, valorada… y acompañada.</p>
+
+      <p>Este es solo el comienzo de tu nuevo año… y ojalá esté lleno de momentos que te hagan feliz de verdad, de
+        risas,
+        de tranquilidad y de sueños que poco a poco se vayan cumpliendo.</p>
+
+      <p>Y mañana… quiero decirte algo más 🤍</p>
+
+      <p>En el Airbnb te tengo un detalle especial preparado con mucho cariño, pensando en ti… en hacerte sentir aún más
+        especial en tu día.</p>
+
+      <p>Espero que te guste, pero sobre todo… espero que este momento, todo lo que estamos viviendo, se quede contigo
+        como
+        algo bonito.</p>
+
+      <p>Feliz cumpleaños, Micaela 🎂✨</p>
+      <p>Me alegra mucho estar aquí contigo… y que este día lo estemos viviendo juntos.</p>
+    </div>
     </div>
   </section>
 
