--- a/pages/waiting.html
+++ b/pages/waiting.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="/css/unlock-page.css">
     <link rel="shortcut icon" type="image/x-icon" href="assets/images/logos/icon.avif">
     <title>Cuenta Regresiva</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=VT323&display=swap"
+        rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
 </head>
 
